--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
+  <script async src="https://cdn.splitbee.io/sb.js"></script>
 
   <title>Sumit Singh</title>
 </head>
