--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,15 @@
     integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous">
   </script>
   <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.1.js" type="text/javascript"></script>
+
+
+  <script>
+    if ("paintWorklet" in CSS) {
+      CSS.paintWorklet.addModule(
+        "https://www.unpkg.com/css-houdini-squircle@0.1.3/squircle.min.js"
+      );
+    }
+  </script>
 </body>
 
 </html>
